--- a/roles/emoj/tasks/main.yml
+++ b/roles/emoj/tasks/main.yml
@@ -1,9 +1,9 @@
-- import_tasks: "{{ helpers }}/package_npm.yml"
+- import_tasks: '{{ helpers }}/package_npm.yml'
   vars:
     package_npm_facts:
       install:
-        - "emoj"
-  tags: "package_npm_emoj"
+        - 'emoj'
+  tags: 'package_npm_emoj'
 
-- import_tasks: "{{ helpers }}/alias.yml"
-  tags: "alias_emoj"
+- import_tasks: '{{ helpers }}/alias.yml'
+  tags: 'alias_emoj'
