--- a/roles/gnome/tasks/main.yml
+++ b/roles/gnome/tasks/main.yml
@@ -1,6 +1,6 @@
-- import_tasks: "{{ helpers }}/dconf.yml"
+- import_tasks: '{{ helpers }}/dconf.yml'
   vars:
-    dconf_facts: "{{ gnome_settings }}"
+    dconf_facts: '{{ gnome_settings }}'
   tags:
-    - "user_font"
-    - "dconf_gnome"
+    - 'user_font'
+    - 'dconf_gnome'
