--- a/roles/lefthook/tasks/main.yml
+++ b/roles/lefthook/tasks/main.yml
@@ -1,18 +1,18 @@
-- import_tasks: "{{ helpers }}/package_npm.yml"
+- import_tasks: '{{ helpers }}/package_npm.yml'
   vars:
     package_npm_facts:
       install:
-        - "@arkweid/lefthook"
-  tags: "package_npm_lefthook"
+        - '@arkweid/lefthook'
+  tags: 'package_npm_lefthook'
 
-- import_tasks: "{{ helpers }}/copy.yml"
+- import_tasks: '{{ helpers }}/copy.yml'
   vars:
     copy_facts:
-      - src: "lefthook.yml"
-        dest: "{{ playbook_dir }}"
-  tags: "copy_lefthook"
+      - src: 'lefthook.yml'
+        dest: '{{ playbook_dir }}'
+  tags: 'copy_lefthook'
 
-- name: install lefthook
+- name: 'install lefthook'
   command: '{{ ansible_user_shell }} -c "source ~/.nvm/nvm.sh; lefthook install -f"'
   changed_when: False
-  tags: "lefthook_install"
+  tags: 'lefthook_install'
