--- a/hosts.yml
+++ b/hosts.yml
@@ -1,5 +1,5 @@
 local:
-  hosts: localhost
+  hosts: 'localhost'
   vars:
-    ansible_connection: local
-    ansible_python_interpreter: "{{ ansible_playbook_python }}"
+    ansible_connection: 'local'
+    ansible_python_interpreter: '{{ ansible_playbook_python }}'
