--- a/roles/ansible_lint/tasks/main.yml
+++ b/roles/ansible_lint/tasks/main.yml
@@ -1,12 +1,12 @@
-- import_tasks: "{{ helpers }}/package_pip.yml"
+- import_tasks: '{{ helpers }}/package_pip.yml'
   vars:
     package_pip_facts:
-      - "ansible-lint"
+      - 'ansible-lint'
 
-- import_tasks: "{{ helpers }}/template.yml"
+- import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_facts:
-      - src: "ansible-lint.yml"
-        dest: "{{ playbook_dir }}"
-        filename: ".ansible-lint"
-  tags: "template_ansible_lint"
+      - src: 'ansible-lint.yml'
+        dest: '{{ playbook_dir }}'
+        filename: '.ansible-lint'
+  tags: 'template_ansible_lint'
