--- a/roles/bluetooth/tasks/main.yml
+++ b/roles/bluetooth/tasks/main.yml
@@ -1,17 +1,17 @@
-- import_tasks: "{{ helpers }}/dconf.yml"
+- import_tasks: '{{ helpers }}/dconf.yml'
   vars:
     dconf_facts:
-      - key: "/org/blueberry/obex-enabled"
-        value: "false"
-      - key: "/org/blueberry/tray-enabled"
-        value: "false"
-  tags: "dconf_bluetooth"
+      - key: '/org/blueberry/obex-enabled'
+        value: 'false'
+      - key: '/org/blueberry/tray-enabled'
+        value: 'false'
+  tags: 'dconf_bluetooth'
 
-- name: set alias
-  command: "bluetoothctl"
+- name: 'set alias'
+  command: 'bluetoothctl'
   args:
-    stdin: "system-alias {{ ansible_date_time.epoch  | hash('md5') }}"
+    stdin: 'system-alias {{ ansible_date_time.epoch  | hash("md5") }}'
   async: 45
   poll: 0
   changed_when: False
-  tags: "bluetooth_alias"
+  tags: 'bluetooth_alias'
