--- a/roles/flameshot/defaults/main.yml
+++ b/roles/flameshot/defaults/main.yml
@@ -1,13 +1,13 @@
 flameshot_settings:
-  - key: "/org/cinnamon/desktop/keybindings/media-keys/area-screenshot"
-    value: "['']"
-  - key: "/org/cinnamon/desktop/keybindings/media-keys/area-screenshot-clip"
-    value: "['']"
-  - key: "/org/cinnamon/desktop/keybindings/media-keys/screenshot"
-    value: "['']"
-  - key: "/org/cinnamon/desktop/keybindings/media-keys/screenshot-clip"
-    value: "['']"
-  - key: "/org/cinnamon/desktop/keybindings/media-keys/window-screenshot"
-    value: "['']"
-  - key: "/org/cinnamon/desktop/keybindings/media-keys/window-screenshot-clip"
-    value: "['']"
+  - key: '/org/cinnamon/desktop/keybindings/media-keys/area-screenshot'
+    value: '[""]'
+  - key: '/org/cinnamon/desktop/keybindings/media-keys/area-screenshot-clip'
+    value: '[""]'
+  - key: '/org/cinnamon/desktop/keybindings/media-keys/screenshot'
+    value: '[""]'
+  - key: '/org/cinnamon/desktop/keybindings/media-keys/screenshot-clip'
+    value: '[""]'
+  - key: '/org/cinnamon/desktop/keybindings/media-keys/window-screenshot'
+    value: '[""]'
+  - key: '/org/cinnamon/desktop/keybindings/media-keys/window-screenshot-clip'
+    value: '[""]'
