--- a/roles/flameshot/tasks/main.yml
+++ b/roles/flameshot/tasks/main.yml
@@ -1,27 +1,27 @@
-- import_tasks: "{{ helpers }}/package_apt_add.yml"
+- import_tasks: '{{ helpers }}/package_apt_add.yml'
   vars:
     package_apt_add_facts:
-      - "flameshot"
+      - 'flameshot'
 
-- import_tasks: "{{ helpers }}/copy.yml"
+- import_tasks: '{{ helpers }}/copy.yml'
   vars:
     copy_facts:
-      - src: "flameshot.ini"
-        dest: "{{ user_config }}/Dharkael"
-  tags: "copy_flameshot"
+      - src: 'flameshot.ini'
+        dest: '{{ user_config }}/Dharkael'
+  tags: 'copy_flameshot'
 
-- import_tasks: "{{ helpers }}/dconf.yml"
+- import_tasks: '{{ helpers }}/dconf.yml'
   vars:
-    dconf_facts: "{{ flameshot_settings }}"
-  tags: "dconf_flameshot"
+    dconf_facts: '{{ flameshot_settings }}'
+  tags: 'dconf_flameshot'
 
-- import_tasks: "{{ helpers }}/shortcut.yml"
+- import_tasks: '{{ helpers }}/shortcut.yml'
   vars:
     shortcut_facts:
-      - name: "'flameshot'"
-        command: "'flameshot full -p {{ user_home }}/Pictures'"
-        binding: "['Print']"
-      - name: "'flameshot select'"
-        command: "'flameshot gui -p {{ user_home }}/Pictures'"
-        binding: "['<Shift>Print']"
-  tags: "shortcut_flameshot"
+      - name: '"flameshot"'
+        command: '"flameshot full -p {{ user_home }}/Pictures"'
+        binding: '["Print"]'
+      - name: '"flameshot select"'
+        command: '"flameshot gui -p {{ user_home }}/Pictures"'
+        binding: '["<Shift>Print"]'
+  tags: 'shortcut_flameshot'
