--- a/roles/gnome/defaults/main.yml
+++ b/roles/gnome/defaults/main.yml
@@ -1,19 +1,19 @@
 gnome_settings:
-  - key: "/org/gnome/libgnomekbd/keyboard/layouts"
-    value: "['us', 'ru']"
-  - key: "/org/gnome/libgnomekbd/keyboard/options"
-    value: "['grp\tgrp:shift_caps_switch']"
-  - key: "/org/gnome/libgnomekbd/desktop/group-per-window"
-    value: "true"
-  - key: "/org/gnome/libgnomekbd/desktop/default-group"
-    value: "0"
-  - key: "/org/gnome/desktop/interface/show-battery-percentage"
-    value: "true"
-  - key: "/org/gnome/desktop/interface/monospace-font-name"
-    value: "'{{ user_font_monospace }} 12'"
-  - key: "/org/gnome/desktop/interface/document-font-name"
-    value: "'{{ user_font_interface }} 11'"
-  - key: "/org/gnome/desktop/privacy/report-technical-problems"
-    value: "false"
-  - key: "/org/gnome/online-accounts/whitelisted-providers"
-    value: "@as []"
+  - key: '/org/gnome/libgnomekbd/keyboard/layouts'
+    value: '["us", "ru"]'
+  - key: '/org/gnome/libgnomekbd/keyboard/options'
+    value: '["grp\tgrp:shift_caps_switch"]'
+  - key: '/org/gnome/libgnomekbd/desktop/group-per-window'
+    value: 'true'
+  - key: '/org/gnome/libgnomekbd/desktop/default-group'
+    value: '0'
+  - key: '/org/gnome/desktop/interface/show-battery-percentage'
+    value: 'true'
+  - key: '/org/gnome/desktop/interface/monospace-font-name'
+    value: '"{{ user_font_monospace }} 12"'
+  - key: '/org/gnome/desktop/interface/document-font-name'
+    value: '"{{ user_font_interface }} 11"'
+  - key: '/org/gnome/desktop/privacy/report-technical-problems'
+    value: 'false'
+  - key: '/org/gnome/online-accounts/whitelisted-providers'
+    value: '@as []'
