--- a/roles/gpg/tasks/main.yml
+++ b/roles/gpg/tasks/main.yml
@@ -1,8 +1,8 @@
-- import_tasks: "{{ helpers }}/copy.yml"
+- import_tasks: '{{ helpers }}/copy.yml'
   vars:
     copy_facts:
-      - src: "gpg-agent.conf"
-        dest: "{{ user_home }}/.gnupg"
-      - src: "gpg.conf"
-        dest: "{{ user_home }}/.gnupg"
-  tags: "copy_gpg"
+      - src: 'gpg-agent.conf'
+        dest: '{{ user_home }}/.gnupg'
+      - src: 'gpg.conf'
+        dest: '{{ user_home }}/.gnupg'
+  tags: 'copy_gpg'
