--- a/roles/htop/tasks/main.yml
+++ b/roles/htop/tasks/main.yml
@@ -1,11 +1,11 @@
-- import_tasks: "{{ helpers }}/package_apt_add.yml"
+- import_tasks: '{{ helpers }}/package_apt_add.yml'
   vars:
     package_apt_add_facts:
-      - "htop"
+      - 'htop'
 
-- import_tasks: "{{ helpers }}/copy.yml"
+- import_tasks: '{{ helpers }}/copy.yml'
   vars:
     copy_facts:
-      - src: "htoprc"
-        dest: "{{ user_config }}/htop"
-  tags: "copy_htop"
+      - src: 'htoprc'
+        dest: '{{ user_config }}/htop'
+  tags: 'copy_htop'
