--- a/roles/mpv/tasks/main.yml
+++ b/roles/mpv/tasks/main.yml
@@ -1,28 +1,28 @@
-- import_tasks: "{{ helpers }}/repo.yml"
+- import_tasks: '{{ helpers }}/repo.yml'
   vars:
     repo_facts:
-      - repo: "ppa:mc3man/mpv-tests"
+      - repo: 'ppa:mc3man/mpv-tests'
 
-- import_tasks: "{{ helpers }}/package_apt_add.yml"
+- import_tasks: '{{ helpers }}/package_apt_add.yml'
   vars:
     package_apt_add_facts:
-      - "mpv"
+      - 'mpv'
 
-- import_tasks: "{{ helpers }}/template.yml"
+- import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_facts:
-      - src: "mpv.conf"
-        dest: "{{ user_config }}/mpv"
-      - src: "input.conf"
-        dest: "{{ user_config }}/mpv"
+      - src: 'mpv.conf'
+        dest: '{{ user_config }}/mpv'
+      - src: 'input.conf'
+        dest: '{{ user_config }}/mpv'
   tags:
-    - "user_font"
-    - "template_mpv"
+    - 'user_font'
+    - 'template_mpv'
 
-- import_tasks: "{{ helpers }}/mime.yml"
+- import_tasks: '{{ helpers }}/mime.yml'
   vars:
     mime_facts:
-      entry_name: "mpv"
+      entry_name: 'mpv'
       type:
-        - "video/webm"
-  tags: "mime"
+        - 'video/webm'
+  tags: 'mime'
