--- a/roles/network_manager/tasks/main.yml
+++ b/roles/network_manager/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: add wired connection
+- name: 'add wired connection'
   command: |
     nmcli connection add
     type ethernet
@@ -16,9 +16,9 @@
     ipv6.dns '2606:4700:4700::1111 2606:4700:4700::1001'
     ipv6.ignore-auto-dns yes
     ipv6.ip6-privacy 1
-  when: nm_wired_name not in nm_connection
+  when: 'nm_wired_name not in nm_connection'
 
-- name: add hotspot connection
+- name: 'add hotspot connection'
   command: |
     nmcli connection add
     type 802-11-wireless
@@ -32,4 +32,4 @@
     ipv4.method shared
     ipv6.method shared
     ipv6.ip6-privacy 1
-  when: nm_hotspot_name not in nm_connection
+  when: 'nm_hotspot_name not in nm_connection'
