--- a/roles/simplescreenrecorder/tasks/main.yml
+++ b/roles/simplescreenrecorder/tasks/main.yml
@@ -1,11 +1,11 @@
-- import_tasks: "{{ helpers }}/package_apt_add.yml"
+- import_tasks: '{{ helpers }}/package_apt_add.yml'
   vars:
     package_apt_add_facts:
-      - "simplescreenrecorder"
+      - 'simplescreenrecorder'
 
-- import_tasks: "{{ helpers }}/template.yml"
+- import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_facts:
-      - src: "settings.conf"
-        dest: "{{ user_home }}/.ssr"
-  tags: "template_simplescreenrecorder"
+      - src: 'settings.conf'
+        dest: '{{ user_home }}/.ssr'
+  tags: 'template_simplescreenrecorder'
