--- a/roles/svgo/tasks/main.yml
+++ b/roles/svgo/tasks/main.yml
@@ -1,16 +1,16 @@
-- import_tasks: "{{ helpers }}/package_npm.yml"
+- import_tasks: '{{ helpers }}/package_npm.yml'
   vars:
     package_npm_facts:
       install:
-        - "svgo"
-  tags: "package_npm_svgo"
+        - 'svgo'
+  tags: 'package_npm_svgo'
 
-- import_tasks: "{{ helpers }}/copy.yml"
+- import_tasks: '{{ helpers }}/copy.yml'
   vars:
     copy_facts:
-      - src: ".svgo.yml"
-        dest: "{{ user_config }}/svgo"
-  tags: "copy_svgo"
+      - src: '.svgo.yml'
+        dest: '{{ user_config }}/svgo'
+  tags: 'copy_svgo'
 
-- import_tasks: "{{ helpers }}/alias.yml"
-  tags: "alias_svgo"
+- import_tasks: '{{ helpers }}/alias.yml'
+  tags: 'alias_svgo'
