--- a/roles/virtualbox/tasks/main.yml
+++ b/roles/virtualbox/tasks/main.yml
@@ -1,21 +1,21 @@
-- import_tasks: "{{ helpers }}/key.yml"
+- import_tasks: '{{ helpers }}/key.yml'
   vars:
     key_facts:
-      - "https://www.virtualbox.org/download/oracle_vbox_2016.asc"
+      - 'https://www.virtualbox.org/download/oracle_vbox_2016.asc'
 
-- import_tasks: "{{ helpers }}/repo.yml"
+- import_tasks: '{{ helpers }}/repo.yml'
   vars:
     repo_facts:
-      - repo: "deb [arch=amd64] https://download.virtualbox.org/virtualbox/debian {{ ubuntu_codename }} contrib"
+      - repo: 'deb [arch=amd64] https://download.virtualbox.org/virtualbox/debian {{ ubuntu_codename }} contrib'
 
-- import_tasks: "{{ helpers }}/package_apt_add.yml"
+- import_tasks: '{{ helpers }}/package_apt_add.yml'
   vars:
     package_apt_add_facts:
-      - "virtualbox-6.1"
+      - 'virtualbox-6.1'
 
-- import_tasks: "{{ helpers }}/template.yml"
+- import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_facts:
-      - src: "VirtualBox.xml"
-        dest: "{{ user_config }}/VirtualBox"
-  tags: "template_virtualbox"
+      - src: 'VirtualBox.xml'
+        dest: '{{ user_config }}/VirtualBox'
+  tags: 'template_virtualbox'
