--- a/roles/yamllint/tasks/main.yml
+++ b/roles/yamllint/tasks/main.yml
@@ -1,12 +1,12 @@
-- import_tasks: "{{ helpers }}/package_pip.yml"
+- import_tasks: '{{ helpers }}/package_pip.yml'
   vars:
     package_pip_facts:
-      - "yamllint"
-  tags: "yamllint"
+      - 'yamllint'
+  tags: 'yamllint'
 
-- import_tasks: "{{ helpers }}/template.yml"
+- import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_facts:
-      - src: ".yamllint.yml"
-        dest: "{{ playbook_dir }}"
-  tags: "template_yamllint"
+      - src: '.yamllint.yml'
+        dest: '{{ playbook_dir }}'
+  tags: 'template_yamllint'
