--- a/roles/zeal/tasks/main.yml
+++ b/roles/zeal/tasks/main.yml
@@ -1,13 +1,13 @@
-- import_tasks: "{{ helpers }}/package_apt_add.yml"
+- import_tasks: '{{ helpers }}/package_apt_add.yml'
   vars:
     package_apt_add_facts:
-      - "zeal"
+      - 'zeal'
 
-- import_tasks: "{{ helpers }}/template.yml"
+- import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_facts:
-      - src: "Zeal.conf"
-        dest: "{{ user_config }}/Zeal"
+      - src: 'Zeal.conf'
+        dest: '{{ user_config }}/Zeal'
   tags:
-    - "user_font"
-    - "template_zeal"
+    - 'user_font'
+    - 'template_zeal'
