--- a/roles/vscodium/tasks/main.yml
+++ b/roles/vscodium/tasks/main.yml
@@ -59,7 +59,7 @@
     backrefs: True
     path: '/usr/share/codium/resources/app/product.json'
     regexp: '^(.*?{{ item.key | to_json }})(.*?)(,)?$'
-    line: '\\1: {{ item.value | to_json }}\\3'
+    line: '\1: {{ item.value | to_json }}\3'
   loop: '{{ vscodium_extensions_gallery }}'
   tags: 'vscodium_marketplace'
 
